Blackpurl/src/objects/SMS_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AuthId__c</fullName>
        <label>AuthId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthToken__c</fullName>
        <label>AuthToken</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Number__c</fullName>
        <label>Source Number</label>
        <type>Phone</type>
    </fields>
    <label>SMS Configuration</label>
</CustomObject>